<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cbr_drivers</name>
  <version>0.1.0</version>
  <description>Collection of useful driver tools for linux</description>

  <maintainer email="john.b.mains@gmail.com">jbm</maintainer>
  <license>MIT</license>

  <buildtool_depend>cmake</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
